--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="view.NewWordActivity">
+        <activity android:name="view.NewBookActivity">
         </activity>
         <activity
                 android:name="view.MainActivity"
