--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,11 @@
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@drawable/icon_app"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name="view.UpdateBookActivity">
+        </activity>
         <activity android:name="view.NewBookActivity">
         </activity>
         <activity
